Revision history for {{$dist->name}}

{{$NEXT}}

0.2       2012-08-11 13:13:39 America/New_York
  - Fix deps on [GitHub]
  - Allow dirty README.pod

0.1       2012-07-30 22:51:14 EST5EDT
  - initial version