@@ -1,70 +1,0 @@
-#!/usr/bin/perl
-
-use strict;
-use warnings;
-use App::Plicease::Dev::Doc;
-
-# PODNAME: devdoc
-# ABSTRACT: Web POD Documentation.
-
-App::Plicease::Dev::Doc->main(@ARGV);
-
-__END__
-
-=head1 SYNOPSIS
-
- % devdoc daemon
-
-=head1 DESCRIPTION
-
-This starts up a server to browse pod documentation.
-
-=head1 SEE ALSO
-
-L<App::Plicease::Dev>
-
-=cut
-
-
-__DATA__
-
-@@ index.html.ep
-% layout 'default';
-% title 'Welcome';
-Welcome to the Mojolicious real-time web framework!
-
-@@ layouts/default.html.ep
-<!DOCTYPE html>
-<html>
-  <head><title><%= title %></title></head>
-  <body>
-    <h2>Programs</h2>
-    <ul>
-      <% foreach my $page (@$progs) { %>
-        <li>
-          <% unless($no_perldoc->{$page}) { %>
-            <a href="<%= url_for('perldocmodule', module => $page ) %>">
-          <% } %>
-          <%= $page %>
-          <% unless($no_perldoc->{$page}) { %>
-            </a>
-          <% } %>
-        </li>
-      <% } %>
-    </ul>
-    <h2>Modules</h2>
-    <ul>
-      <% foreach my $page (@$modules) { %>
-        <li>
-          <% unless($no_perldoc->{$page}) { %>
-            <a href="<%= url_for('perldocmodule', module => $page ) %>">
-          <% } %>
-          <%= $page %>
-          <% unless($no_perldoc->{$page}) { %>
-            </a>
-          <% } %>
-        </li>
-      <% } %>
-    </ul>
-  </body>
-</html>
