@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dep on IO::File::Closure.  Use Path::Class instead.
+  - Remove devdoc (it wasn't really working right anyway)
 
 0.2       2012-08-11 13:13:39 America/New_York
   - Fix deps on [GitHub]
